--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "mizne",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "koa": "^2.2.0",
     "koa-body": "^2.1.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "0.0.16",
     "koa-log4": "^2.2.1",
     "koa-router": "^7.2.0",
-    "koa-static": "^3.0.0"
+    "koa-static": "^3.0.0",
+    "mongoose": "^4.10.6"
   }
 }
